# ChangeLog for dev-python/sip
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/sip/ChangeLog,v 1.279 2014/03/23 17:16:09 ago Exp $

  23 Mar 2014; Agostino Sarubbo <ago@gentoo.org> sip-4.15.3.ebuild:
  Stable for sparc, wrt bug #495638

  23 Mar 2014; Agostino Sarubbo <ago@gentoo.org> sip-4.15.3.ebuild:
  Stable for x86, wrt bug #495638

  19 Mar 2014; Agostino Sarubbo <ago@gentoo.org> sip-4.15.3.ebuild:
  Stable for alpha, wrt bug #495638

  18 Mar 2014; Agostino Sarubbo <ago@gentoo.org> sip-4.15.3.ebuild:
  Stable for ia64, wrt bug #495638

  14 Mar 2014; Agostino Sarubbo <ago@gentoo.org> sip-4.15.3.ebuild:
  Stable for ppc64, wrt bug #495638

  08 Mar 2014; Pacho Ramos <pacho@gentoo.org> sip-4.15.3.ebuild:
  amd64 stable, bug 495638

  02 Feb 2014; Agostino Sarubbo <ago@gentoo.org> sip-4.15.3.ebuild:
  Stable for ppc, wrt bug #495638

  30 Jan 2014; Markus Meier <maekke@gentoo.org> sip-4.15.3.ebuild:
  arm stable, bug #495638

  27 Jan 2014; Jeroen Roovers <jer@gentoo.org> sip-4.15.3.ebuild:
  Stable for HPPA (bug #495638).

*sip-4.15.4 (14 Jan 2014)

  14 Jan 2014; Patrick Lauer <patrick@gentoo.org> +sip-4.15.4.ebuild:
  Bump

  25 Dec 2013; Davide Pesavento <pesa@gentoo.org> -sip-4.14.3.ebuild,
  -sip-4.15.2.ebuild:
  old

  23 Dec 2013; Agostino Sarubbo <ago@gentoo.org> sip-4.14.7.ebuild:
  Stable for sparc, wrt bug #483112

*sip-4.15.3 (23 Oct 2013)

  23 Oct 2013; Davide Pesavento <pesa@gentoo.org> +sip-4.15.3.ebuild,
  -sip-4.14.6.ebuild:
  Version bump, remove old.

  22 Oct 2013; Fabian Groffen <grobian@gentoo.org> sip-4.15.2.ebuild:
  Marked ~x64-macos, bug #487670

*sip-4.15.2 (17 Sep 2013)

  17 Sep 2013; Patrick Lauer <patrick@gentoo.org> +sip-4.15.2.ebuild:
  Bump

  10 Sep 2013; Markus Meier <maekke@gentoo.org> sip-4.14.7.ebuild:
  arm stable, bug #483112

  05 Sep 2013; Agostino Sarubbo <ago@gentoo.org> sip-4.14.7.ebuild:
  Stable for x86, wrt bug #483112
