@@ -1,29 +1,21 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX sip-4.9.3-darwin.patch 1447 SHA256 91751308ce118af4f7f7cb3ac3e25de29c527ddc0bb52102e6e835c8c0e64ea2 SHA512 a0b2c4deb30b547473d8e2b095b57d32c8a82c12e5670b330fbfce1faddab87960a0c71b150fd7c51a5ce6486eb54b40fd6fa15d76b031599b988fc88179486b WHIRLPOOL 88cc2a34b1616dcb5377879cc9e50d9dc16b7ed505ac88c14aadbb3ce9d824fdf196231fcbdcc5c63cfe7c8c531bf70799e7cf56d0b20db2c3a433668596f9fb
 DIST sip-4.14.7.tar.gz 754916 SHA256 05669120a53a2c98f98560424cda413ae95f5528494c80764004dbea78d361b7 SHA512 8a2ff12553c4c0b31f5884ef292b9c233d0a1148c66c9bdea2b7f74ce151465a16f8e511069e6e47a0527f960c1f13a9ec6c5766d7324670c236a92536bbb6b3 WHIRLPOOL 6729efbd0e6a42138d5590822a0a22f7c38938dc2af4af2245ae13b1461bf15510c0f4161ef3dd864f02c98a168817f755ccd60b41c94358ffcacfc3d14ad673
 DIST sip-4.15.3.tar.gz 773818 SHA256 46f245252866dbdb7fb5aca194bda991cc84ba8090d5e864765ee7e511a053d4 SHA512 495522aa2a553099c02ab4f7ce7485d24267e5093398f5f20e7102542153084486b6e654564ee716634a257301dd094a08754cdc40282cd2e4496e52619bc138 WHIRLPOOL 3192e9f15420409905faaa155939829b24da8bd5e1467ca908857ba293416e114d31f4374bb54659f285ed693cd51074c249221e0063b4d916326e7724e8e9f0
 DIST sip-4.15.4.tar.gz 776179 SHA256 594b742873cd135dc945e61f0fff4d9d35ea5da8d23e2fc8f3820c3771a52228 SHA512 887f740853d3ce09946faea2ccababfad505d454cfe2f9d525104d02a05fe6c146a549464901231a76039ea3855223206ef48c122bb51806cfd97a54c23ac143 WHIRLPOOL 545ea82634b87c0d782732bfbefe0d49fce2b09d1e405bd6b23691979c8f1b346fa95df962a1461b6654a651eb05b0c8eea7d94320d8d55d2dbcc54f2f36b1db
+DIST sip-4.15.5.tar.gz 843133 SHA256 9b11d87e7f382ce22bf013137f29462e75b56f5ea46f3fea6061bb20f967d559 SHA512 7ddccf274027992efecfcb7186999164260955046e62723b0e26ac13002f7a4f4d12222880a62efc06c3b9318d337db4c7c2f48a16b2c7b971652bdd27c49f9c WHIRLPOOL f2bd9e73181cbb1edf6a967fb121065e0b7aae01edb8a846a89b1dd32affa474f831a0ad1f46e6875975cf003ae22fcf550a21c58793877b1295716362839aa8
 EBUILD sip-4.14.7.ebuild 2949 SHA256 f7509074e6f7980e5ef0d2ca11883794e057c895ac6b19ca439b3e4b7f3a464d SHA512 3cbdbce5d4909f9b11f369be68345006cfb0a288b5696726d65b43d3181a85b8b9ac60eb9461b9bb6005b97627580778aa692411c2322a25d51f8b80228653e8 WHIRLPOOL 51566bdf1464516821062a259b77de7b410351a2241614426a7dfb17c5af99f3abc620f2452737ec859ccc97e878b0590e7afc05b86bb4afbaa0d14217693153
 EBUILD sip-4.15.3.ebuild 2960 SHA256 54de6c5df7e375cb37717d21367dc2ff268672444de13937002d3ec7141a1644 SHA512 c687a49279a74a8d93d3f830f507dbc263e228d31fda03802f77a33fb701591f8db8b8e07211c7c95439817d52fa66dfd751d736a490b29ab33fb3f2cf15321c WHIRLPOOL 6a8dea3c1bbdaaa0258e4e03a0949e87a94ec791a3508a78acc1689352950297bbc854721dfa9485a7faa839a0b47f3a3506e579d8ffbc21019ad75654f5ef00
 EBUILD sip-4.15.4.ebuild 2972 SHA256 65c1c1dca9bd7d2a7f5a3f5a4a855cdc4fafd11df3061637e29d4d3fff15635f SHA512 65a990453a8d9f52112fdcd92ac0291b71155e419a23dc68282e4125efa549ac3955419891361c24367b112cd8594f6b5d2746091a20918ea4f53a05027a3c29 WHIRLPOOL 18480f0a814b5b9b7fbffc11419a4c61ee8c500d7c23cf168cd5be3bd7b4a88d8ab6f18439bbb8b4a3d765f0b97b24055d1483461c543d915efe678274c6645a
-MISC ChangeLog 33358 SHA256 acd6cdf11392ae98209297d12b13f9d8821a81a7554b12b784ed489337aae536 SHA512 c764435d7698408574b02b225fceb0411073ae4c68aef9ba66f66de2cbb2c3a90af4cc31784d775caa4bef9ddc9956ab2a027b43b4ecebc02378d9b80c80860a WHIRLPOOL e0dc060b1a1ea71f96a6d77e39d13a3f04edab7042a57544b47adeee94f4fa1c9a5a974929bda7a53951a22b5dc815e0707b4e0d4083f21d87bb80b8e7e53a38
+EBUILD sip-4.15.5.ebuild 2973 SHA256 6bca0ba09932edd6254c7ddd73a35515dfa06ceb994607766933c91470025d93 SHA512 d69ed32c65e837295e205d48d9f694775a57d9593f8663313ea089d4c3d849ee2f5c38b25f34e1d43bdcac8d82a55723138ff642036034934bfe37038bce52f7 WHIRLPOOL 8f0157888549d26566520365c11b6084941a1fcb9e043ff2ab924bebdba0c177e23be20f90779bf5c3a0604e1cbc38b8c6d8f3d0b527b2601e809401dca76b93
+MISC ChangeLog 33465 SHA256 53e4b09060770b04ac5c3891f4d1cf1242769c391881f3088ecbe7e89ac5ac56 SHA512 ecc2281d2ff7ceb3be3df633d31d49f7b4aceb536ec9820d0985d3789530d55db22a1baca21e827acd5bd2dfa6f25b728cfed64c440ddfa5aaa5c287d3b5c7f5 WHIRLPOOL 6611020338fad3c177c2092b4fcaccd42daf028aee88494ee6fc8e160e3465911e233c7e112383599759ef5b2e81104a89ee09e0cd794d7421763d638a775249
 MISC metadata.xml 422 SHA256 a39c95b926df4f580178e84c2705f41a0991f75ab6e6bc465f5fb99f02a08412 SHA512 ac3dcaa48537ac9a4e641749817cc9d3799b96577d8a82258f0d5b5476cbe452de2aaae5a7ee183b31f8054aa9baf44c138206c3a240589e2c6aca5a65a3e4cf WHIRLPOOL efce5684d26c31c9d89930a97cbd8b2f83228eba71e4d830e5b2fb57ef3a11fcf9d27f34b21cdc098314e4084f50f12afcb51b1efc69fd6eef1823b710d9b8f7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCgAGBQJTLxXFAAoJELp701BxlEWfGGUQAIk3AOqqp6s3BSPBPqllOxb5
-ajNfy14hha56M8VSablAKTyF3WqsMdaXb7mguxVWcnPOLGZg2/4+GZJ1bAf4jDDD
-jn1FbCKJhudTZrxymzUdv6nBU9u5vMz9bWUjSrSO6yuY8DtKBMKh7WUlmOE07Seu
-2a7WBrMynRyEX05QMS1/LuOZldoTLrzVydZmc3WUx9FzR8LH8fkwQzbkgxz2MjHW
-KQQdhMWTc55mVHFaYcJbNB5SXJoq5RqSgf74L1FMeO4jLKzKFQD/GeEIGAu99nbU
-BdwGD8BmQJ35qpdOHIny3HoyyGj8HqHJpoEEri1l7bEUo5Z0Kt3rgy1V912K3lFF
-vIjvTLOWHl5f5UIqPCC7cEs5mNItQdOTIqGIKIFobXwYUtEjOJh+y1tljxOZkhUI
-4TlTuWW3ulDAbYWIxvRrfTs+zsKZ8YVrW752PZmUr0sUxz4Y2yMMy8syEco/FEf1
-Ta1omZmlzksMVFsaomqDAxhN4zUYlcT96qCD77Z7Ozqba5euZ2Y8foDvCyzgOIu7
-Iu/rv6PDEloKYM+ADvpfwD17UObddQ9iZNVHVqNh9sbxMzdwCt7ux2J98wP9y+Qs
-f/dKqvGBClJIQdOSU/aFKLRGPhamARYwsD0T8pRghmemPL1zteiIAzrzwwTdGOOU
-p7KAjx94dZDxhH3lat9p
-=Fy9o
+iEYEAREIAAYFAlM6cfwACgkQso7CE7gHKw12UgCg2GsKKd+n0uPqtQdUbXPgfWmT
+HvQAoNuHdMlv8IvG/+T23cTscmF6bpxS
+=6g/X
 -----END PGP SIGNATURE-----
