@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/sip
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/sip/ChangeLog,v 1.279 2014/03/23 17:16:09 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/sip/ChangeLog,v 1.280 2014/04/01 08:07:06 idella4 Exp $
+
+*sip-4.15.5 (01 Apr 2014)
+
+  01 Apr 2014; Ian Delaney <idella4@gentoo.org> +sip-4.15.5.ebuild:
+  bump
 
   23 Mar 2014; Agostino Sarubbo <ago@gentoo.org> sip-4.15.3.ebuild:
   Stable for sparc, wrt bug #495638
